Complete new-product

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,7 @@
 @import "font.scss";
 @import "hero-section.scss";
 @import "brands-section.scss";
+@import "new-products.scss";
 
 * {
   margin: 0;
