--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,92 @@
   justify-content: space-between;
 }
 
+.new-products {
+  padding: 72px 100px 64px 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 55px;
+}
+.new-products-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Integral CF;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 57.6px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.new-products .products {
+  display: flex;
+  gap: 20px;
+}
+.new-products .products .product {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.new-products .products .product img {
+  width: 100%;
+}
+.new-products .products .product-text {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.new-products .products .product-text h3 {
+  font-family: Satoshi;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: 0%;
+}
+.new-products .products .product-text img {
+  width: 50%;
+}
+.new-products .products .product-text .price {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.new-products .products .product-text .price p {
+  font-family: Satoshi;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32.4px;
+  letter-spacing: 0%;
+}
+.new-products .products .product-text .price .offer {
+  color: rgba(0, 0, 0, 0.4);
+  text-decoration: line-through;
+}
+.new-products .products .product-text .price .percentage {
+  border-radius: 62px;
+  padding: 6px 14px;
+  background: rgba(255, 51, 51, 0.1019607843);
+  color: #ff3333;
+  font-family: Satoshi;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16.2px;
+  letter-spacing: 0%;
+}
+.new-products .btn {
+  display: flex;
+  justify-content: center;
+}
+.new-products .btn button {
+  border-radius: 62px;
+  padding: 16px 54px;
+  border: 1px solid rgba(0, 0, 0, 0.1019607843);
+  font-family: Satoshi;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21.6px;
+  letter-spacing: 0%;
+}
+
 * {
   margin: 0;
   padding: 0;
