--- a/assets/css/_product-details.scss
+++ b/assets/css/_product-details.scss
@@ -33,7 +33,6 @@
     flex-direction: column;
     gap: 14px;
     justify-content: space-between;
-   
   }
   &-image {
     padding-right: 40px;
@@ -178,6 +177,155 @@
         color: white;
         border-radius: 62px;
         // width: 400px;
+      }
+    }
+  }
+}
+
+.diff-section {
+  padding: 0px 100px;
+  // padding-bottom: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 24px;
+  &-wrapper {
+    display: flex;
+    padding: 0px 140px;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Satoshi;
+    font-weight: 400;
+    font-size: 20px;
+    leading-trim: Cap height;
+    line-height: 22px;
+    letter-spacing: 0%;
+    color: #00000099;
+  }
+}
+
+.mini-line {
+  width: 414px;
+  border: 2px solid #000000;
+  display: flex;
+  justify-content: center;
+}
+
+.all-review-section {
+  padding: 24px 100px 36px 100px;
+  &-text {
+    padding-bottom: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &-1 {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+      & .t1 {
+        font-family: Satoshi;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 32.4px;
+        letter-spacing: 0%;
+      }
+      & .t2 {
+        font-family: Satoshi;
+        font-weight: 400;
+        font-size: 16px;
+        leading-trim: Cap height;
+        line-height: 22px;
+        letter-spacing: 0%;
+        color: #00000099;
+      }
+    }
+    &-2 {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      & .btn-1 {
+        img {
+          display: flex;
+        }
+      }
+      & .btn-2 {
+        img {
+          display: flex;
+        }
+      }
+      & .btn-3 {
+        border-radius: 62px;
+        padding: 16px 20px;
+        background: #000000;
+        color: white;
+        font-family: Satoshi;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 21.6px;
+        letter-spacing: 0%;
+      }
+    }
+  }
+  &-review {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 20px;
+    & .review {
+      border-radius: 20px;
+      padding: 28px 32px;
+      border: 1px solid #0000001a;
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+
+      &-text-1 {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        & .star {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
+        & .text {
+          display: flex;
+          flex-direction: column;
+          gap: 12px;
+          & .h {
+            display: flex;
+            gap: 4px;
+            align-items: center;
+            &-1 {
+              font-family: Satoshi;
+              font-weight: 700;
+              font-size: 20px;
+              leading-trim: Cap height;
+              line-height: 22px;
+              letter-spacing: 0%;
+            }
+            &-2 {
+              & img {
+                display: flex;
+              }
+            }
+          }
+          & .p {
+            font-family: Satoshi;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 22px;
+            letter-spacing: 0%;
+            color: #00000099;
+          }
+        }
+      }
+      &-text-2 {
+        font-family: Satoshi;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 22px;
+        letter-spacing: 0%;
+        color: #00000099;
       }
     }
   }
