--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,7 @@
 @import "offer-section.scss";
 @import "footer.scss";
 @import "product-details.scss";
+@import "shop-now.scss";
 * {
   margin: 0;
   padding: 0;
