--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@
 @import "footer.scss";
 @import "product-details.scss";
 @import "shop-now.scss";
+@import "cart.scss";
 * {
   margin: 0;
   padding: 0;
