--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -723,7 +723,7 @@ a {
   justify-content: center;
   align-items: center;
 }
-.product-details-section-text .btn .button-2 {
+.product-details-section-text .btn .button-2 button {
   background: #000000;
   padding: 16px 54px;
   display: flex;
@@ -731,6 +731,7 @@ a {
   align-items: center;
   color: white;
   border-radius: 62px;
+  cursor: pointer;
 }
 
 .diff-section {
@@ -1230,6 +1231,195 @@ a {
   display: flex;
   padding-top: 20px;
   justify-content: space-between;
+}
+
+.your-cart-section {
+  padding: 0px 100px 80px 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.your-cart-section-text h2 {
+  font-family: Integral CF;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
+  letter-spacing: 0%;
+}
+.your-cart-section-order {
+  display: flex;
+  gap: 20px;
+}
+.your-cart-section-order-details {
+  padding: 20px 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1019607843);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.your-cart-section-order-details .product {
+  display: flex;
+  gap: 16px;
+}
+.your-cart-section-order-details .product-details {
+  display: flex;
+  justify-content: space-between;
+  gap: 75px;
+}
+.your-cart-section-order-details .product-details-text {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.your-cart-section-order-details .product-details-text .text-1 {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.your-cart-section-order-details .product-details-text .text-1 h6 {
+  font-family: Satoshi;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: 0%;
+}
+.your-cart-section-order-details .product-details-text .text-1 .para {
+  font-family: Satoshi;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18.9px;
+  letter-spacing: 0%;
+  color: rgba(0, 0, 0, 0.6);
+}
+.your-cart-section-order-details .product-details-text .text-1 .para span {
+  color: black;
+}
+.your-cart-section-order-details .product-details-text .text-2 {
+  font-family: Satoshi;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32.4px;
+  letter-spacing: 0%;
+}
+.your-cart-section-order-details .product-details-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.your-cart-section-order-details .product-details-btn .remove-btn {
+  display: flex;
+  justify-content: flex-end;
+}
+.your-cart-section-order-details .product-details-btn .page-btn {
+  display: flex;
+  gap: 20px;
+  padding: 12px 20px;
+  background: #f0f0f0;
+  font-family: Satoshi;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18.9px;
+  letter-spacing: 0%;
+  border-radius: 62px;
+}
+.your-cart-section-order-summary {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1019607843);
+  padding: 20px 24px;
+  border-radius: 20px;
+}
+.your-cart-section-order-summary-text {
+  font-family: Satoshi;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32.4px;
+  letter-spacing: 0%;
+}
+.your-cart-section-order-summary-total {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.your-cart-section-order-summary-total .fee {
+  display: flex;
+  justify-content: space-between;
+}
+.your-cart-section-order-summary-total .fee-text {
+  font-family: Satoshi;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: 0%;
+  color: rgba(0, 0, 0, 0.6);
+}
+.your-cart-section-order-summary-total .fee-amount {
+  font-family: Satoshi;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: 0%;
+  text-align: right;
+}
+.your-cart-section-order-summary-code {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.your-cart-section-order-summary-code .add-promo-code {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  border-radius: 62px;
+  padding: 12px 16px;
+  background: #f0f0f0;
+  width: 326px;
+  font-family: Satoshi;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21.6px;
+  letter-spacing: 0%;
+  color: rgba(0, 0, 0, 0.4);
+}
+.your-cart-section-order-summary-code .add-promo-code .image {
+  display: flex;
+}
+.your-cart-section-order-summary-code .apply-code button {
+  border-radius: 62px;
+  padding: 12px 16px;
+  background: #000000;
+  font-family: Satoshi;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21.6px;
+  letter-spacing: 0%;
+  color: white;
+}
+.your-cart-section-order-summary-checkout {
+  display: flex;
+  justify-content: center;
+}
+.your-cart-section-order-summary-checkout button {
+  width: 457px;
+  justify-content: center;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  border-radius: 62px;
+  padding: 16px 54px;
+  font-family: Satoshi;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21.6px;
+  letter-spacing: 0%;
+  color: white;
+  background: black;
+}
+.your-cart-section-order-summary-checkout button .btn-image {
+  display: flex;
 }
 
 * {
