Add some hover function and move to page href

--- a/assets/css/_offer-section.scss
+++ b/assets/css/_offer-section.scss
@@ -28,15 +28,15 @@
     align-items: center;
 
     & .email {
-      display: flex;
-      width: 349px;
-      //   height: 48;
-      border-radius: 62px;
-      padding: 12px 16px;
-      gap: 12px;
-      background: #ffffff;
-      color: black;
-      align-items: center;
+      // display: flex;
+      // width: 349px;
+      // //   height: 48;
+      // border-radius: 62px;
+      // padding: 12px 16px;
+      // gap: 12px;
+      // background: #ffffff;
+      // color: black;
+      // align-items: center;
       & .img {
         display: flex;
       }
@@ -47,6 +47,28 @@
         line-height: 21.6px;
         letter-spacing: 0%;
         color: #00000066;
+        & input {
+          // border: none;
+          display: flex;
+          width: 349px;
+          //   height: 48;
+          border-radius: 62px;
+          padding: 12px 146px 12px 45px;
+          gap: 12px;
+          background: #ffffff;
+          color: black;
+          align-items: center;
+          background-image: url('/assets/images/offer-section/email.png');
+          background-repeat: no-repeat;
+          background-position: 15px 11px;
+          font-family: Satoshi;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 21.6px;
+          letter-spacing: 0%;
+          color: #00000066;
+
+        }
       }
     }
     & .subscribe {
