--- a/assets/css/_hero-section.scss
+++ b/assets/css/_hero-section.scss
@@ -37,6 +37,13 @@
           border-radius: 62px;
           background: #000000;
           color: #ffffff;
+          border: none;
+          transition: all 0.5s ease;
+        }
+        & button:hover {
+          background-color: white;
+          color: black;
+          box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.6);
         }
       }
     }
@@ -57,7 +64,6 @@
         line-height: 22px;
         letter-spacing: 0%;
         color: #00000099;
-
       }
     }
   }
