--- a/assets/css/_new-products.scss
+++ b/assets/css/_new-products.scss
@@ -23,8 +23,15 @@
       display: flex;
       flex-direction: column;
       gap: 16px;
+      &-img {
+        width: 100%;
+      }
       & img {
         width: 100%;
+        transition: transform 0.7s ease;
+      }
+      & img:hover {
+        transform: scale(1.1);
       }
       &-text {
         display: flex;
@@ -83,6 +90,12 @@
       font-size: 16px;
       line-height: 21.6px;
       letter-spacing: 0%;
+      transition: all 0.5s ease;
+    }
+    & button:hover {
+      background-color: black;
+      color: white;
+      box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.6);
     }
   }
 }
