--- a/assets/css/_review-section.scss
+++ b/assets/css/_review-section.scss
@@ -24,6 +24,7 @@
     gap: 20px;
     justify-content: space-between;
     & .review {
+      transition: all 0.5s ease;
       border: 1px solid #0000001a;
       border-radius: 20px;
       padding: 28px 32px;
@@ -60,9 +61,11 @@
           line-height: 22px;
           letter-spacing: 0%;
           color: #00000099;
-
         }
       }
+    }
+    & .review:hover {
+      box-shadow: inset 0px 0px 10px 10px rgb(123, 201, 211);
     }
   }
 }
