--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,13 @@ a {
   border-radius: 62px;
   background: #000000;
   color: #ffffff;
+  border: none;
+  transition: all 0.5s ease;
+}
+.hero-section-text-wrapper .btn button:hover {
+  background-color: white;
+  color: black;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.6);
 }
 .hero-section-text-numbers {
   display: flex;
@@ -159,8 +166,15 @@ a {
   flex-direction: column;
   gap: 16px;
 }
+.new-products .products .product-img {
+  width: 100%;
+}
 .new-products .products .product img {
   width: 100%;
+  transition: transform 0.7s ease;
+}
+.new-products .products .product img:hover {
+  transform: scale(1.1);
 }
 .new-products .products .product-text {
   display: flex;
@@ -217,6 +231,12 @@ a {
   font-size: 16px;
   line-height: 21.6px;
   letter-spacing: 0%;
+  transition: all 0.5s ease;
+}
+.new-products .btn button:hover {
+  background-color: black;
+  color: white;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.6);
 }
 
 .top-selling {
@@ -303,6 +323,12 @@ a {
   font-size: 16px;
   line-height: 21.6px;
   letter-spacing: 0%;
+  transition: all 0.5s ease;
+}
+.top-selling .btn button:hover {
+  background-color: black;
+  color: white;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.6);
 }
 
 .dress-style-section {
@@ -370,6 +396,7 @@ a {
   justify-content: space-between;
 }
 .review-section-customer .review {
+  transition: all 0.5s ease;
   border: 1px solid rgba(0, 0, 0, 0.1019607843);
   border-radius: 20px;
   padding: 28px 32px;
@@ -408,6 +435,9 @@ a {
   letter-spacing: 0%;
   color: rgba(0, 0, 0, 0.6);
 }
+.review-section-customer .review:hover {
+  box-shadow: inset 0px 0px 10px 10px rgb(123, 201, 211);
+}
 
 .offer-section {
   padding: 0 100px;
@@ -436,16 +466,6 @@ a {
   gap: 14px;
   align-items: center;
 }
-.offer-section-details .email {
-  display: flex;
-  width: 349px;
-  border-radius: 62px;
-  padding: 12px 16px;
-  gap: 12px;
-  background: #ffffff;
-  color: black;
-  align-items: center;
-}
 .offer-section-details .email .img {
   display: flex;
 }
@@ -453,6 +473,25 @@ a {
   font-family: Satoshi;
   font-weight: 400;
   font-size: 16px;
+  line-height: 21.6px;
+  letter-spacing: 0%;
+  color: rgba(0, 0, 0, 0.4);
+}
+.offer-section-details .email .text input {
+  display: flex;
+  width: 349px;
+  border-radius: 62px;
+  padding: 12px 146px 12px 45px;
+  gap: 12px;
+  background: #ffffff;
+  color: black;
+  align-items: center;
+  background-image: url("/assets/images/offer-section/email.png");
+  background-repeat: no-repeat;
+  background-position: 15px 11px;
+  font-family: Satoshi;
+  font-weight: 400;
+  font-size: 14px;
   line-height: 21.6px;
   letter-spacing: 0%;
   color: rgba(0, 0, 0, 0.4);
